# Integrating-diagenetic-equations-using-Python

./: .gitignore  CITATION.cff  Compute_jacobian.py  Derive_jacobian.py  Evolve_scenario.py  Jacobian.txt  Jacobian_adjusted_to_reuse_common_factors.txt  Jacobian_adjusted_to_reuse_common_factors_and_powers_cleared.txt  LHeureux_model.py  LMAHeureuxPorosityDiffV2.m  LMAHeureuxPorosityDiffV2.py  Pipfile  README.md  ScenarioA.m  ScenarioA.py  Try_prange_to_fill_array.py  pde_sir.py  pyproject.toml
.github/workflows/: docs.yml  python-app.yml
docs/: index.html  marlpde.html  search.js
docs/marlpde/: Evolve_scenario.html  LHeureux_model.html  parameters.html
marlpde/: Evolve_scenario.py  LHeureux_model.py  marlpde.py  parameters.py
tests/Regression_test/: test_regression.py  test_resemblance_with_figure_3_LHeureux.py
tests/Regression_test/data/: LMAHeureuxPorosityDiff_Phi0_0.6_PhiIni_0.5.hdf5  LMAHeureuxPorosityDiff_Phi0_PhiIni_0.8.hdf5  Matlab_output_Scenario_A_Phi0_PhiIni_0.5_k3_k4_0.01.h5
