[tool.poetry]
name = "marlpde-python"
version = "0.1.0"
description = "Integrator for L'Heureux Marl PDE in Python"
authors = ["Hanno Spreeuw <h.spreeuw@esciencecenter.nl>", "Johan Hidding <j.hidding@esciencecenter.nl>"]
license = "Apache-2"

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
py-pde = "^0.32.0"
tqdm = "^4.64.1"
numpy = "^1.23.5"
matplotlib = "^3.7.1"
pint = "^0.22"
ipython = "^8.14.0"
pytest = "^7.4.0"
numba = "^0.57.1"
h5py = "^3.9.0"
pandas = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
